--- a/app/views/profiles/_user_profile.html.erb
+++ b/app/views/profiles/_user_profile.html.erb
@@ -1,3 +1,13 @@
+<% def check_liked(post) %>
+<% if LikeBeer.where(user: current_user, review_beer: post).count.zero? %>
+<% return "" %>
+<% else %>
+<% return " liked" %>
+<% end %>
+<% end %>
+
+
+
 <div class="container-profile">
   <div class="row">
     <div class="col-xs-12 col-md-6 marg-bot">
