--- a/app/views/review_beers/new.html.erb
+++ b/app/views/review_beers/new.html.erb
@@ -11,6 +11,7 @@
         <%= f.input :photo_cache, as: :hidden %>
         <%= f.button :submit, class: "btn btn-primary" %>
         <% end %>
+        <%= link_to "Go back to beer", beer_path(@beer), class: 'go-to-beers-btn' %>
       </div>
     </div>
   </div>
