--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -1,10 +1,51 @@
+<style>
+/* .qr-code {
+  width: 500px !important;
+} */
+
+/*table.qr-code td.black { background-color: #000; }
+table.qr-code td.white { background-color: #fff; }
+table.qr-code  {
+    height: 500px ;*/
+
+table.qr-code {
+  border-width: 0;
+  border-style: none;
+  border-color: #0000ff;
+  border-collapse: collapse;
+}
+table.qr-code td {
+  border-width: 0;
+  border-style: none;
+  border-color: #0000ff;
+  border-collapse: collapse;
+  padding: 0;
+  margin: 0;
+  width: 10px;
+  height: 10px;
+}
+table.qr-code td.black { background-color: #000; }
+table.qr-code td.white { background-color: #fff; }
+ }
+</style>
+
 <h1>User#welcome</h1>
 
-<p>
-  <%= @greeting %>, find me in app/views/user_mailer/welcome.html.erb
-</p>
 
-<p>Hi <%= @user.name %>,</p>
+<table class="qr-code">
+<% @qr.modules.each_index do |x| %>
+  <tr>
+  <% @qr.modules.each_index do |y| %>
+   <% if @qr.dark?(x,y) %>
+    <td class="black"/>
+   <% else %>
+    <td class="white"/>
+   <% end %>
+  <% end %>
+  </tr>
+<% end %>
+</table>
+<p>Hi <%= @user.email %>,</p>
 
 <p>Today we'll talk about SMTP and Postmark!</p>
 
